--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -33,6 +33,20 @@
 			color: red;
 		}
 
+		.global-title-bar {
+            background-color: #343a40;
+            color: white;
+            padding: 15px 0;
+            text-align: center;
+        }
+
+		.global-title-bar h1 {
+            margin: 0;
+            font-size: 1.8em;
+            font-weight: bold;
+        }
+		
+
 		.action-button {
 			padding: 5px 10px;
 			margin-left: 5px;
@@ -81,14 +95,11 @@
 </head>
 
 <body>
-	<header class="masthead">
-		<div class="container px-4 px-lg-5 h-100 align-items-center justify-content-center text-center">
-			<div class="col-lg-8 align-self-end">
-				<h1 class="font-weight-bold" style="color: black !important;">Gestión de Tickets Spring Grupo 9</h1>
-				<hr class="divider" sec:authorize="hasRole('Cliente')" />
-			</div>
-		</div>
-	</header>
+	<header class="global-title-bar">
+        <div class="global-title-bar">
+        	<h1>Gestión de Tickets Spring Grupo 9</h1>
+        </div>
+    </header>
 
 	<main class="dashboard-container">
 
@@ -226,8 +237,10 @@
 			<div class="dashboard-menu">
 				<a th:href="@{/}" class="menu-button">Usuarios</a>
                 <a th:href="@{/usuarios/admin/crear}" class="menu-button">Agregar Usuario</a>
-                <a th:href="@{/tickets/admin}" class="menu-button">Tickets</a> </div>
-		
+                <a th:href="@{/tickets/admin}" class="menu-button">Tickets</a> 
+				<a th:href="@{/admin/intervenciones}" class="menu-button">Intervenciones</a>
+			</div>
+				
 
 			<div class="dashboard-content">
                 <h2>Listado de Usuarios</h2>
