Fix Filtro Prioridad
Fix en filtro de prioridad del panel de cliente

--- a/src/main/resources/templates/tickets/mis-tickets.html
+++ b/src/main/resources/templates/tickets/mis-tickets.html
@@ -154,9 +154,10 @@
                 <label for="prioridadId">Prioridad:</label>
                 <select id="prioridadId" name="prioridadId" class="search-input" style="width: 100%; padding: 8px;">
                     <option value="">-- Seleccione Prioridad --</option>
-                    <option value="1">Alta</option>
-                    <option value="2">Media</option>
-                    <option value="3">Baja</option>
+					<option value="1">Pendiente</option>
+                    <option value="4">Alta</option>
+                    <option value="3">Media</option>
+                    <option value="2">Baja</option>
                 </select>
             </div>
 
