Fix Filtro Estado
Fix en filtro de estado del panel de cliente

--- a/src/main/resources/templates/tickets/mis-tickets.html
+++ b/src/main/resources/templates/tickets/mis-tickets.html
@@ -166,8 +166,11 @@
                 <select id="estadoId" name="estadoId" class="search-input" style="width: 100%; padding: 8px;">
                     <option value="">-- Seleccione Estado--</option>
                     <option value="1">Abierto</option>
-                    <option value="2">Derivado</option>
-                    <option value="3">Cerrado</option>
+                    <option value="2">Derivado Sector 1</option>
+					<option value="3">Derivado Sector 2</option>
+					<option value="4">Derivado Sector 3</option>
+					<option value="5">Derivado Sector 4</option>
+                    <option value="6">Cerrado</option>
                 </select>
             </div>
 
